--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,21 @@
 		<springframework.version>5.1.0.RELEASE</springframework.version>
 		<springsecurity.version>5.0.0.RELEASE</springsecurity.version>
 		<java.version>1.8</java.version>
+			<!--Exclude the files Here-->
+		<sonar.exclusions>
+			src/main/java/com/chatroom/app/aspect/*,
+			src/main/java/com/chatroom/app/convertor/**,
+			src/main/java/com/chatroom/app/dto/**,
+			src/main/java/com/chatroom/app/entity/*,
+			src/main/java/com/chatroom/app/exception/**,
+			src/main/java/com/chatroom/app/security/*,
+			src/main/java/com/chatroom/app/dao/**,
+			src/main/java/com/chatroom/app/config/*,
+			src/main/java/com/chatroom/app/service/message/*,
+			src/main/java/com/chatroom/app/controller/MessageController.java,
+			src/main/java/com/chatroom/app/AppApplication.java
+		</sonar.exclusions>
+
 	</properties>
 	<dependencies>
 		<dependency>
@@ -71,6 +86,11 @@
 			<version>5.0.3.RELEASE</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
@@ -121,10 +141,45 @@
 			<artifactId>aspectjweaver</artifactId>
 			<version>1.7.0</version>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>3.11.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>2.15.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.6</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
